# whisper-diarization

./: .gitignore  README.md  diarize.py  diarize_parallel.py  helpers.py  pyproject.toml  requirements.txt
whisper_diarization/: __init__.py  diarization_utils.py  diarize.py  diarize_parallel.py  helpers.py  nemo_process.py
