[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-diarization"
version = "0.1.0"
description = "A package for speaker diarization using Whisper and NeMo (Fork of github.com/MahmoudAshraf97/whisper-diarization)"
authors = [
    {name = "Tyler Kahn"},
    {name = "Mahmoud Ashraf"},
]
requires-python = ">=3.10"
dynamic = ["dependencies"]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tylerkahn/whisper-diarization"
Repository = "https://github.com/tylerkahn/whisper-diarization"

[project.scripts]
diarize = "diarize:main"
diarize-parallel = "diarize_parallel:main"

[tool.setuptools]
packages = ["whisper_diarization"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}
